force-app/main/default/objects/Item__c/fields/Transmission_Gearbox_Manufacurer__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_Manufacurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on Manufacturer</description>
    <label>Transmission &amp; Gearbox Manufacurer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Manufacturer__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Boat Manufacturer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipName>Items4</relationshipName>
    <type>Lookup</type>
</CustomField>