force-app/main/default/objects/Item__c/fields/Transmission_Gearbox_Model__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_Model__c</fullName>
    <description>Specifies the Model of the Transmission &amp; Gearbox</description>
    <label>Transmission &amp; Gearbox  Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>