force-app/main/default/objects/Item__c/fields/Transmission_Gearbox_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_Serial_Number__c</fullName>
    <description>Specifies the Transmission &amp; Gearbox Serial Number</description>
    <label>Transmission &amp; Gearbox Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>