force-app/main/default/objects/Item__c/fields/Trialer_No_Axels__c.field-meta.xml
<CustomField>
    <fullName>Trialer_No_Axels__c</fullName>
    <description>Specifies the Trailer No Axels ,of type Number</description>
    <label>Trialer No Axels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>