force-app/main/default/objects/Item__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <formula>Related_to_Inventory__r.Warranty_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>