force-app/main/default/objects/Item__c/fields/Warranty_End_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date_F__c</fullName>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>