force-app/main/default/objects/Item__c/fields/Warranty_Engine_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Engine_Term__c</fullName>
    <formula>Related_to_Inventory__r.Warranty_Engine_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Engine Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>