force-app/main/default/objects/Item__c/fields/Warranty_Labor_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Labor_End_Date__c</fullName>
    <formula>DATE( YEAR( Warranty_Start_Date_F__c ) + Warranty_Labor_Term_F__c , MONTH( Warranty_Start_Date_F__c ), DAY( Warranty_Start_Date_F__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Labor End Date</label>
    <type>Date</type>
</CustomField>