force-app/main/default/objects/Item__c/fields/Warranty_Labor_Term_F__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Labor_Term_F__c</fullName>
    <label>Warranty Labor Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>