force-app/main/default/objects/Item__c/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <formula>Related_to_Inventory__r.Warranty_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>