force-app/main/default/objects/Item__c/fields/Warranty_Start_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date_F__c</fullName>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>